[package]
name = "warehouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.9"
clap = { version = "4.1.4", features = ["derive"] }
eyre = "0.6.12"
num_cpus = "1.15.0"
serde = { version = "*", features = [ "derive" ] }
serde_json = "1.0.91"
serde_yaml = "0.8"
